# insta-mine

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  Readme.md  pyproject.toml
src/: main.py
src/core/: base_model.py  config.py  utils.py
src/modules/miner/: endpoints.py  model.py  service.py
